# c-nodes

./: .gitignore  CMakeLists.txt  README.md  compile_clang.bat  copy_to_web.sh
.github/workflows/: main.yml
doc/: Dokumentation.tex
materials/: ast.c  ast.h  c-expression-viewer.html  c-expression-viewer.js  c-expression-viewer.php  c-expression-viewer.pug  d3-json.c  expressionviewer-parser.y  expressionviewer-scanner.l  fragen.md  lex.yy.c  symtab.cpp  symtab.hpp  term-parser.y  term-scanner.l  y.tab.c  y.tab.h
src/: args.h  args_base.h  ast.c  ast.h  debug.h  main.c  node.c  node.h  node_arithmetic.h  node_plus.c  node_plus.h  node_value.c  node_value.h  parser.y  scanner.l  symtab.c  symtab.h  values.c  values.h
src/__generated__/: parser.c  parser.h  scanner.c
src/nodes/: node.c  node.h  node_arithmetic.h  node_bool_ops.c  node_bool_ops.h  node_cast.c  node_cast.h  node_comma_op.c  node_comma_op.h  node_compare.h  node_declaration.c  node_declaration.h  node_function.c  node_function.h  node_integer_ops.c  node_integer_ops.h  node_shift_ops.c  node_shift_ops.h  node_sizeof.c  node_sizeof.h  node_ternary.c  node_ternary.h  node_unary_ops.c  node_unary_ops.h  node_value.c  node_variable.c  node_variable.h  nodes_list.h
tools/nginx-1.17.6/conf/: nginx.conf
web/: c-expression-viewer.css  c-expression-viewer.html  c-expression-viewer.js  c-expression-viewer.php  index.html
